--- a/training.ipynb
+++ b/training.ipynb
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "model.predict(test_arr) #From this we can conclude that the prediction shows the leaf hash Late Blight disease!!"
+    "model.predict(test_arr) #From this we can conclude that the prediction shows the leaf has Late Blight disease!!"
    ]
   }
  ],
